--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
       content="Webshop created using react"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-   
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css">
     <title>Webshop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+    <script src="%PUBLIC_URL%/js/scripts.js"></script>
   </body>
 </html>
